新增时间片